turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:9: error: value White is not a member of object java.awt.Color
	if (c == Color.White)
                       ^