turmites.lessons.turmites.langton.Langton.scala.code
def step() {
	def setCouleurSol(c:Color) = {
		setCouleurBrosse(c);
		leveBrosse();
		baisseBrosse();
	}

	var c= getCouleurSol;
	if (c == Color.White) {
		setCouleurSol(Color.BLACK);
		droite();
		avance();
	} else {
		setCouleurSol(Color.WHITE);
		gauche();
		avance();
	}
}
